Sec10_Chap114: cleaned code after merged remote